# stereocapture

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
source/: config.hh.in  main.cc  scmainwindow.cc  scmainwindow.hh  scmainwindow.ui  stereocapture.qrc
source/widgets/: scsettingsdialog.cc  scsettingsdialog.hh  scsettingsdialog.ui  scviewfinder.cc  scviewfinder.hh
